# pygSQuiG

./: .dockerignore  .gitignore  .mypy.ini  .pre-commit-config.yaml  CLAUDE.md  CODE_REVIEW_REPORT.md  DETERMINISTIC_FORCING_SUMMARY.md  DOCKER_SUMMARY.md  Dockerfile  Dockerfile.gpu  GPU_OPTIMIZATION_SUMMARY.md  LICENSE  NEXT_STEPS.md  README.md  REFACTORING_GUIDE.md  STOCHASTIC_FORCING_SUMMARY.md  docker-compose.yml  initial_instructions.md  pyproject.toml  test_02_gsqg_physics.py  test_04_adaptive_timestepping.py  test_05_passive_scalars.py  test_07_yaml_configuration.py
.github/workflows/: docker.yml  publish.yml  tests.yml
configs/: docker_example.yml  sqg_with_scalars.yml
docker/: README.md  build.sh  run.sh
docs/: passive_scalars.md
docs/developer/: config_migration.md
docs/user_guide/: advanced_features.md  configuration.md  core_concepts.md  forcing_patterns.md  getting_started.md  index.md  passive_scalars_guide.md  running_simulations.md  troubleshooting.md
examples/: __init__.py  config_with_scalars.yml  deterministic_forcing_example.py  euler_2d.yml  forced_turbulence.py  gpu_optimization_example.py  gsqg_alpha0.5_highres.yml  passive_scalar_example.py  simple_sqg.py  sqg_alpha1_forced.yml  sqg_turbulence_cascade.yml  stochastic_forcing_example.py  test_minimal.yml
notebooks/: 01_getting_started.ipynb  02_gsqg_physics.ipynb  03_forced_turbulence.ipynb  04_adaptive_timestepping.ipynb  05_passive_scalars.ipynb  07_yaml_configuration.ipynb  NOTEBOOK_PLAN.md  sqg_tutorial.ipynb
pygsquig/: __init__.py  exceptions.py  validation.py
pygsquig/core/: adaptive_solver.py  adaptive_timestep.py  gpu_utils.py  grid.py  multi_gpu.py  operators.py  solver.py  solver_optimized.py  solver_with_scalars.py  time_integrator.py
pygsquig/forcing/: __init__.py  combined_forcing.py  damping.py  deterministic_forcing.py  physical_forcing.py  ring_forcing.py  stochastic_forcing.py
pygsquig/io/: __init__.py  config.py  config_adapter.py  hdf5_io.py  simple_config.py
pygsquig/plots/: __init__.py  animations.py  fields.py  spectra.py  style.py  timeseries.py
pygsquig/scalars/: __init__.py  diagnostics.py  passive_scalar.py  source_terms.py  state.py
pygsquig/scripts/: __init__.py  analyse.py  benchmark.py  benchmark_optimizations.py  full_analysis.py  profile_performance.py  run.py  run_old.py  validate.py  validate_spectrum.py
pygsquig/utils/: __init__.py  diagnostics.py  logging.py
tests/: test_adaptive_timestep.py  test_config.py  test_config_integration.py  test_damping.py  test_deterministic_forcing.py  test_diagnostics_jit.py  test_gpu_utils.py  test_grid.py  test_grid_jit.py  test_hdf5_io.py  test_hyperviscosity_duplication.py  test_integration.py  test_operators.py  test_passive_scalar.py  test_physical_forcing.py  test_plotting_refactor.py  test_ring_forcing.py  test_run_script.py  test_run_with_scalars.py  test_scalar_config.py  test_simple_config.py  test_solver.py  test_stochastic_forcing.py  test_time_integrator.py
